--- a/.github/workflows/deploy_census_api.yml
+++ b/.github/workflows/deploy_census_api.yml
@@ -8,9 +8,10 @@ jobs:
       - name: Deploy Go API
         uses: appleboy/ssh-action@v0.1.2
         with:
-          host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
-          key: ${{secrets.SSH_KEY}} # Private or public key of the server
-          username: ${{ secrets.SSH_UNAME }} # User of the server you want to ssh into
+          host: ${{secrets.SSH_HOST}}
+          username: ${{ secrets.SSH_UNAME }}
+          key: ${{secrets.SSH_KEY}}
+
      
           script: |
             mkdir census-api-test
